# mpris-miniplayer

./: .gitignore  AGENTS.md  README.md  handover.md  io.github.ChrisLauinger.MprisMiniPlayer.yml  meson.build  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: release-flatpak.yml  release.yml
data/: io.github.ChrisLauinger.MprisMiniPlayer.desktop.in  io.github.ChrisLauinger.MprisMiniPlayer.gresource.xml  io.github.ChrisLauinger.MprisMiniPlayer.gschema.xml  io.github.ChrisLauinger.MprisMiniPlayer.metainfo.xml.in  io.github.ChrisLauinger.MprisMiniPlayer.releases.xml  meson.build
debian/: changelog  control  copyright  mpris-miniplayer.1  mpris-miniplayer.manpages
po/: POTFILES  de.po  es.po  fr.po  meson.build  mpris-miniplayer.pot
rpm/: mpris-miniplayer.spec
src/: app-settings.vala  application.vala  background-portal.vala  config.vala.in  main.vala  meson.build  mpris-manager.vala  mpris-player.vala  preferences-window.vala  status-indicator.vala  window.vala
